Changelog
=========

0.6 (unreleased)
----------------

- Note: Version '0.5' seems to have been a brown-bag-release, it
doesn't get pulled of PyPI when running buildout. We ignore version
'0.5' and continue with '0.6'.


0.4 (2012-02-01)
-------------------

- really hide globalnav (forgot config in last release) [ida]


0.3 (2012-01-29)
-------------------

- Deassign collective.portlet.sitemap in left column. [ida]

- Hide default globalnav-viewlet. [ida] 

- Unlimited css-sublevel-depth-support. [ida]

- Styling for top-ul and visualize selected toplevel. [ida]


0.2 (2012-01-07)
-------------------

- Extended CSS to support up to two sublevels instead of one.


0.1 (2012-01-05)
-------------------

- Initial release