@@ -1,17 +1,22 @@
 Introduction
 ============
 
-This product uses Products.ContentWellPortlets to place a collective.portlet.sitemap above the columns and gives the dropdown-effect via css.
+This product uses Products.ContentWellPortlets to place a sitemap-portlet
+above the columns and gives the dropdown-effect via CSS.
 
-This way, your folder structure will be mirrowed in the dropdown 
+This way, your folder structure will be mirrowed in the dropdown.
 
-The depth and target-folder can be configured via the sitemap-portlets userinterface.
+The depth and target-folder can be configured via the sitemap-portlets
+web-user-interface, just like Plone's standard navigation-portlets.
+
+Includes responsive design for dektop-, tablet- and mobile-devices.
 
 
 Installation
 ============
 
-In your buildout.cfg add 'adi.dropdownmenu'.
+In your buildout.cfg's eggs-section add 'adi.dropdownmenu',
+run builduot, restart instance.
 
 
 Dependencies
@@ -21,13 +26,14 @@ Dependencies
 
 - collective.portlet.sitemap
 
+
 Credits
 =======
 
 Glued together by Ida Ebkes.
 
-In kind cooperation with Alterway, the creators of collective.portlet.sitemap, namely Gilles Lenfant.
+In kind cooperation with Alterway, the creators of "collective.portlet.sitemap".
 
-The Weblion's crowd for developing Products.ContentWellPortlets.
+The Weblion's crowd for developing "Products.ContentWellPortlets".
 
-And of course the whole plone community, especially the core developers.
+And thanks to all of the friendly and helpful people of the Plone community.
