@@ -1,0 +1,1 @@
+@media (max-width: 600px){body.icons-on #portlets-in-header .portletNavigationTree a{padding-left:0 !important}#portlets-in-header .portletNavigationTree ul{clear:both}#portlets-in-header .portletNavigationTree .subMenuButton{float:right}#portlets-in-header .portletNavigationTree .closeSubmenu{transform:rotate(180deg);-ms-transform:rotate(180deg);-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg)}}
