@@ -1,0 +1,24 @@
+@media (max-width: 600px) {
+
+/* Override Sunburst Theme's 'base.css': */
+body.icons-on #portlets-in-header .portletNavigationTree a {
+    padding-left: 0 !important;
+}
+
+#portlets-in-header .portletNavigationTree {
+    ul {
+        clear: both;
+    }
+    .subMenuButton {
+        float: right;
+    }
+    .closeSubmenu {
+        transform: rotate(180deg);
+        -ms-transform: rotate(180deg);
+        -webkit-transform: rotate(180deg);
+        -moz-transform: rotate(180deg);
+        -o-transform: rotate(180deg);
+    }
+}
+
+} /* EO @media (max-width: 600px) */
