@@ -1,0 +1,5 @@
+from zope.interface import Interface
+
+class IAdiDropdownmenu(Interface):
+    """Interface for layer-specific customisation.
+    """
