@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+    <layers>
+        <layer name="adi.dropdownmenu.layer"
+                   interface="adi.dropdownmenu.interfaces.IAdiDropdownmenu" />
+    </layers>
