@@ -1,1 +1,6 @@
-<?xml version="1.0"?><object name="portal_css"> <stylesheet title=""    id="++resource++adi_dropdown.css"    media="screen" rel="stylesheet" rendering="import"    cacheable="True" compression="safe" cookable="True" enabled="1" expression=""/></object>
+<?xml version="1.0"?><object name="portal_css"> <stylesheet title=""    id="++resource++adi_dropdown.css"    media="screen" rel="stylesheet" rendering="import"    cacheable="True" compression="safe" cookable="True" enabled="1" expression=""/><stylesheet title=""
+    id="++resource++adi.dropdownmenu.resources/mobile.css"
+    media="screen" rel="stylesheet" rendering="import"
+    cacheable="True" compression="safe" cookable="True"
+    enabled="1" expression=""/>
+</object>
