@@ -4,6 +4,8 @@ Changelog
 0.6 (unreleased)
 ----------------
 
+- Add layout for tablets and mobile-devices.
+
 - Note: Version '0.5' seems to have been a brown-bag-release, it
 doesn't get pulled of PyPI when running buildout. We ignore version
 '0.5' and continue with '0.6'.
